:bug: Fix gutter dot alignment issue

--- a/styles/linter-plus.less
+++ b/styles/linter-plus.less
@@ -16,7 +16,6 @@ linter-message {
 
 .linter-highlight {
   flex: 0 0 auto;
-  align-self: flex-start;
 }
 
 .linter-message-link {
